# rich-core

./: .gitignore  Doxyfile  LICENSE  Makefile.am  README.md  configure.ac
core-reducer/: Makefile.am  defines.h  elfbinaryreader.cpp  elfbinaryreader.h  elfcorereader.cpp  elfcorereader.h  main.cpp  procinterface.cpp  procinterface.h  rawelfwriter.cpp  rawelfwriter.h  reducer.cpp  reducer.h
debian/: changelog  control  copyright  core-reducer.manpages  postrm  rules  sp-rich-core-postproc.manpages  sp-rich-core-tests.dirs  sp-rich-core.aegis  sp-rich-core.manpages
doc/: core-reducer.1  rich-core-dumper.1  rich-core-extract.1
rich-core-extract/: Makefile.am  rich-core-extract.c
scripts/: Makefile.am  rich-core-dumper  rich-core-dumps  rich-core-dumps.conf  rich-core-pattern  rich-core-pattern.conf
tests/: Makefile.am  test_extra_files  test_extract  test_script  test_whiteblacklist  tests.xml
tests/unit_tests/: CppUnitSignalException.h  Makefile.am  main_test.cpp  signalcatcher.cpp  signalcatcher.h  test_elfbinaryreader.cpp  test_elfbinaryreader.h  test_elfcorereader.cpp  test_elfcorereader.h
